@@ -1,3 +1,9 @@
+2008-03-31  Alexander Larsson  <alexl@redhat.com>
+
+        * gmemoryoutputstream.c:
+	Clarify docs for g_memory_output_stream_get_size.
+	Add g_memory_output_stream_get_data_size.
+
 2008-03-30  Matthias Clasen  <mclasen@redhat.com>
 
 	* gio.symbols:
